// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`large test: exact mode applies major message 1`] = `
Object {
  "/changelog/2.0.0": Object {
    "operation": "add",
    "value": Object {
      "changes": Object {
        "four": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "subject": "baz",
              "type": "fix",
            },
          ],
          "version": "5.0.0",
        },
        "one": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": undefined,
              "subject": "fix: baz",
              "type": "dependency update",
            },
          ],
          "version": "1.2.4",
        },
        "three": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": undefined,
              "subject": "fix: baz",
              "type": "dependency update",
            },
          ],
          "version": "3.4.6",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
  "/mainPackage/rlsr/determinedIncrementLevel": Object {
    "operation": "add",
    "value": 2,
  },
  "/mainPackage/rlsr/previouslyUnreleased": Object {
    "operation": "add",
    "value": Array [
      "one",
      "three",
      "four",
    ],
  },
  "/mainPackage/rlsr/shouldBeCommitted": Object {
    "operation": "add",
    "value": Array [],
  },
  "/mainPackage/version": Object {
    "operation": "update",
    "value": "2.0.0",
  },
  "/messages/0": Object {
    "operation": "delete",
  },
  "/packages/five/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
      ],
    },
  },
  "/packages/four/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": 2,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "BREAKING CHANGE: text ",
          "level": 2,
          "scope": "four",
          "subject": "baz",
          "type": "fix",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
        "three",
      ],
    },
  },
  "/packages/four/version": Object {
    "operation": "update",
    "value": "5.0.0",
  },
  "/packages/one/dependencies/four": Object {
    "operation": "update",
    "value": "^5",
  },
  "/packages/one/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "four",
        "five",
      ],
      "determinedIncrementLevel": 0,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "BREAKING CHANGE: text ",
          "dependencyType": "dependencies",
          "level": 2,
          "package": "four",
          "scope": "four",
          "subject": "baz",
          "type": "fix",
          "version": "5.0.0",
        },
      ],
      "relations": Array [],
    },
  },
  "/packages/one/version": Object {
    "operation": "update",
    "value": "1.2.4",
  },
  "/packages/three/dependencies/four": Object {
    "operation": "update",
    "value": "^5",
  },
  "/packages/three/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "four",
      ],
      "determinedIncrementLevel": 0,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "BREAKING CHANGE: text ",
          "dependencyType": "dependencies",
          "level": 2,
          "package": "four",
          "scope": "four",
          "subject": "baz",
          "type": "fix",
          "version": "5.0.0",
        },
      ],
      "relations": Array [
        "two",
      ],
    },
  },
  "/packages/three/version": Object {
    "operation": "update",
    "value": "3.4.6",
  },
  "/packages/two/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "three",
      ],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
}
`;

exports[`large test: exact mode applies major then minor 1`] = `
Object {
  "/changelog/2.0.0": Object {
    "operation": "add",
    "value": Object {
      "changes": Object {
        "one": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "BREAKING CHANGE: text ",
              "subject": "raz",
              "type": "fix",
            },
          ],
          "version": "2.0.0",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
  "/mainPackage/rlsr/determinedIncrementLevel": Object {
    "operation": "add",
    "value": 2,
  },
  "/mainPackage/rlsr/previouslyUnreleased": Object {
    "operation": "add",
    "value": Array [
      "one",
    ],
  },
  "/mainPackage/rlsr/shouldBeCommitted": Object {
    "operation": "add",
    "value": Array [],
  },
  "/mainPackage/version": Object {
    "operation": "update",
    "value": "2.0.0",
  },
  "/messages/0": Object {
    "operation": "delete",
  },
  "/packages/five/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
      ],
    },
  },
  "/packages/four/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
        "three",
      ],
    },
  },
  "/packages/one/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "four",
        "five",
      ],
      "determinedIncrementLevel": 2,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "one",
          ],
          "body": "BREAKING CHANGE: text ",
          "level": 2,
          "scope": "one",
          "subject": "raz",
          "type": "fix",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
  "/packages/one/version": Object {
    "operation": "update",
    "value": "2.0.0",
  },
  "/packages/three/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "four",
      ],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "two",
      ],
    },
  },
  "/packages/two/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "three",
      ],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
}
`;

exports[`large test: exact mode applies major then minor 2`] = `
Object {
  "/changelog/2.1.0": Object {
    "operation": "add",
    "value": Object {
      "changes": Object {
        "one": Object {
          "determinedIncrementLevel": undefined,
          "messages": Array [],
          "version": "2.0.0",
        },
        "three": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "three",
              ],
              "body": "",
              "subject": "rar",
              "type": "feat",
            },
          ],
          "version": "3.5.0",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
  "/mainPackage/rlsr/determinedIncrementLevel": Object {
    "operation": "update",
    "value": 1,
  },
  "/mainPackage/rlsr/previouslyUnreleased/1": Object {
    "operation": "add",
    "value": "three",
  },
  "/mainPackage/version": Object {
    "operation": "update",
    "value": "2.1.0",
  },
  "/messages/0": Object {
    "operation": "delete",
  },
  "/packages/one/rlsr/determinedIncrementLevel": Object {
    "operation": "update",
    "value": -1,
  },
  "/packages/one/rlsr/messages/0": Object {
    "operation": "delete",
  },
  "/packages/three/rlsr/determinedIncrementLevel": Object {
    "operation": "update",
    "value": 1,
  },
  "/packages/three/rlsr/hasBump": Object {
    "operation": "add",
    "value": true,
  },
  "/packages/three/rlsr/messages/0": Object {
    "operation": "add",
    "value": Object {
      "affected": Array [
        "three",
      ],
      "body": "",
      "level": 1,
      "scope": "three",
      "subject": "rar",
      "type": "feat",
    },
  },
  "/packages/three/version": Object {
    "operation": "update",
    "value": "3.5.0",
  },
}
`;

exports[`large test: exact mode applies messages with multiple affected packages 1`] = `
Object {
  "/changelog/1.9.0": Object {
    "operation": "add",
    "value": Object {
      "changes": Object {
        "one": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "subject": "waz",
              "type": "feat",
            },
          ],
          "version": "1.3.0",
        },
        "three": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "two",
                "three",
              ],
              "body": "
",
              "subject": "tar",
              "type": "fix",
            },
          ],
          "version": "3.4.6",
        },
        "two": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "two",
                "three",
              ],
              "body": "
",
              "subject": "tar",
              "type": "fix",
            },
          ],
          "version": "2.3.5",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
  "/mainPackage/rlsr/determinedIncrementLevel": Object {
    "operation": "add",
    "value": 1,
  },
  "/mainPackage/rlsr/previouslyUnreleased": Object {
    "operation": "add",
    "value": Array [
      "one",
      "two",
      "three",
    ],
  },
  "/mainPackage/rlsr/shouldBeCommitted": Object {
    "operation": "add",
    "value": Array [],
  },
  "/mainPackage/version": Object {
    "operation": "update",
    "value": "1.9.0",
  },
  "/messages/0": Object {
    "operation": "delete",
  },
  "/messages/1": Object {
    "operation": "delete",
  },
  "/packages/five/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
      ],
    },
  },
  "/packages/four/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
        "three",
      ],
    },
  },
  "/packages/one/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "four",
        "five",
      ],
      "determinedIncrementLevel": 1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "one",
          ],
          "body": "",
          "level": 1,
          "scope": "one",
          "subject": "waz",
          "type": "feat",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
  "/packages/one/version": Object {
    "operation": "update",
    "value": "1.3.0",
  },
  "/packages/three/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "four",
      ],
      "determinedIncrementLevel": 0,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "two",
            "three",
          ],
          "body": "
",
          "level": 0,
          "scope": "one",
          "subject": "tar",
          "type": "fix",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "two",
      ],
    },
  },
  "/packages/three/version": Object {
    "operation": "update",
    "value": "3.4.6",
  },
  "/packages/two/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "three",
      ],
      "determinedIncrementLevel": 0,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "two",
            "three",
          ],
          "body": "
",
          "level": 0,
          "scope": "one",
          "subject": "tar",
          "type": "fix",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
  "/packages/two/version": Object {
    "operation": "update",
    "value": "2.3.5",
  },
}
`;

exports[`large test: exact mode applies minor message 1`] = `
Object {
  "/changelog/1.9.0": Object {
    "operation": "add",
    "value": Object {
      "changes": Object {
        "four": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "subject": "bar",
              "type": "feat",
            },
          ],
          "version": "4.6.0",
        },
        "three": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": undefined,
              "subject": "feat: bar",
              "type": "dependency update",
            },
          ],
          "version": "3.4.6",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
  "/mainPackage/rlsr/determinedIncrementLevel": Object {
    "operation": "add",
    "value": 1,
  },
  "/mainPackage/rlsr/previouslyUnreleased": Object {
    "operation": "add",
    "value": Array [
      "three",
      "four",
    ],
  },
  "/mainPackage/rlsr/shouldBeCommitted": Object {
    "operation": "add",
    "value": Array [],
  },
  "/mainPackage/version": Object {
    "operation": "update",
    "value": "1.9.0",
  },
  "/messages/0": Object {
    "operation": "delete",
  },
  "/packages/five/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
      ],
    },
  },
  "/packages/four/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": 1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "",
          "level": 1,
          "scope": "four",
          "subject": "bar",
          "type": "feat",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
        "three",
      ],
    },
  },
  "/packages/four/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/one/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "four",
        "five",
      ],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
  "/packages/three/dependencies/four": Object {
    "operation": "update",
    "value": "^4",
  },
  "/packages/three/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "four",
      ],
      "determinedIncrementLevel": 0,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "",
          "dependencyType": "dependencies",
          "level": 1,
          "package": "four",
          "scope": "four",
          "subject": "bar",
          "type": "feat",
          "version": "4.6.0",
        },
      ],
      "relations": Array [
        "two",
      ],
    },
  },
  "/packages/three/version": Object {
    "operation": "update",
    "value": "3.4.6",
  },
  "/packages/two/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "three",
      ],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
}
`;

exports[`large test: exact mode applies minor then major 1`] = `
Object {
  "/changelog/1.9.0": Object {
    "operation": "add",
    "value": Object {
      "changes": Object {
        "one": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "subject": "raz",
              "type": "feat",
            },
          ],
          "version": "1.3.0",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
  "/mainPackage/rlsr/determinedIncrementLevel": Object {
    "operation": "add",
    "value": 1,
  },
  "/mainPackage/rlsr/previouslyUnreleased": Object {
    "operation": "add",
    "value": Array [
      "one",
    ],
  },
  "/mainPackage/rlsr/shouldBeCommitted": Object {
    "operation": "add",
    "value": Array [],
  },
  "/mainPackage/version": Object {
    "operation": "update",
    "value": "1.9.0",
  },
  "/messages/0": Object {
    "operation": "delete",
  },
  "/packages/five/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
      ],
    },
  },
  "/packages/four/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
        "three",
      ],
    },
  },
  "/packages/one/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "four",
        "five",
      ],
      "determinedIncrementLevel": 1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "one",
          ],
          "body": "",
          "level": 1,
          "scope": "one",
          "subject": "raz",
          "type": "feat",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
  "/packages/one/version": Object {
    "operation": "update",
    "value": "1.3.0",
  },
  "/packages/three/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "four",
      ],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "two",
      ],
    },
  },
  "/packages/two/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "three",
      ],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
}
`;

exports[`large test: exact mode applies minor then major 2`] = `
Object {
  "/changelog/2.0.0": Object {
    "operation": "add",
    "value": Object {
      "changes": Object {
        "one": Object {
          "determinedIncrementLevel": undefined,
          "messages": Array [],
          "version": "1.3.0",
        },
        "three": Object {
          "determinedIncrementLevel": "major",
          "messages": Array [
            Object {
              "affected": Array [
                "three",
              ],
              "body": "BREAKING CHANGE: text ",
              "subject": "rar",
              "type": "fix",
            },
          ],
          "version": "4.0.0",
        },
        "two": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "three",
              ],
              "body": "BREAKING CHANGE: text ",
              "source": undefined,
              "subject": "fix: rar",
              "type": "dependency update",
            },
          ],
          "version": "2.3.5",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
  "/mainPackage/rlsr/determinedIncrementLevel": Object {
    "operation": "update",
    "value": 2,
  },
  "/mainPackage/rlsr/previouslyUnreleased/1": Object {
    "operation": "add",
    "value": "two",
  },
  "/mainPackage/rlsr/previouslyUnreleased/2": Object {
    "operation": "add",
    "value": "three",
  },
  "/mainPackage/version": Object {
    "operation": "update",
    "value": "2.0.0",
  },
  "/messages/0": Object {
    "operation": "delete",
  },
  "/packages/one/rlsr/determinedIncrementLevel": Object {
    "operation": "update",
    "value": -1,
  },
  "/packages/one/rlsr/messages/0": Object {
    "operation": "delete",
  },
  "/packages/three/rlsr/determinedIncrementLevel": Object {
    "operation": "update",
    "value": 2,
  },
  "/packages/three/rlsr/hasBump": Object {
    "operation": "add",
    "value": true,
  },
  "/packages/three/rlsr/messages/0": Object {
    "operation": "add",
    "value": Object {
      "affected": Array [
        "three",
      ],
      "body": "BREAKING CHANGE: text ",
      "level": 2,
      "scope": "three",
      "subject": "rar",
      "type": "fix",
    },
  },
  "/packages/three/version": Object {
    "operation": "update",
    "value": "4.0.0",
  },
  "/packages/two/dependencies/three": Object {
    "operation": "update",
    "value": "^4",
  },
  "/packages/two/rlsr/determinedIncrementLevel": Object {
    "operation": "update",
    "value": 0,
  },
  "/packages/two/rlsr/hasBump": Object {
    "operation": "add",
    "value": true,
  },
  "/packages/two/rlsr/relatedMessages/0": Object {
    "operation": "add",
    "value": Object {
      "affected": Array [
        "three",
      ],
      "body": "BREAKING CHANGE: text ",
      "dependencyType": "dependencies",
      "level": 2,
      "package": "three",
      "scope": "three",
      "subject": "rar",
      "type": "fix",
      "version": "4.0.0",
    },
  },
  "/packages/two/version": Object {
    "operation": "update",
    "value": "2.3.5",
  },
}
`;

exports[`large test: exact mode applies patch message 1`] = `
Object {
  "/changelog/1.8.6": Object {
    "operation": "add",
    "value": Object {
      "changes": Object {
        "four": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "subject": "foo",
              "type": "fix",
            },
          ],
          "version": "4.5.7",
        },
        "three": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": undefined,
              "subject": "fix: foo",
              "type": "dependency update",
            },
          ],
          "version": "3.4.6",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
  "/mainPackage/rlsr/determinedIncrementLevel": Object {
    "operation": "add",
    "value": 0,
  },
  "/mainPackage/rlsr/previouslyUnreleased": Object {
    "operation": "add",
    "value": Array [
      "three",
      "four",
    ],
  },
  "/mainPackage/rlsr/shouldBeCommitted": Object {
    "operation": "add",
    "value": Array [],
  },
  "/mainPackage/version": Object {
    "operation": "update",
    "value": "1.8.6",
  },
  "/messages/0": Object {
    "operation": "delete",
  },
  "/packages/five/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
      ],
    },
  },
  "/packages/four/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": 0,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "",
          "level": 0,
          "scope": "four",
          "subject": "foo",
          "type": "fix",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
        "three",
      ],
    },
  },
  "/packages/four/version": Object {
    "operation": "update",
    "value": "4.5.7",
  },
  "/packages/one/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "four",
        "five",
      ],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
  "/packages/three/dependencies/four": Object {
    "operation": "update",
    "value": "^4",
  },
  "/packages/three/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "four",
      ],
      "determinedIncrementLevel": 0,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "",
          "dependencyType": "dependencies",
          "level": 0,
          "package": "four",
          "scope": "four",
          "subject": "foo",
          "type": "fix",
          "version": "4.5.7",
        },
      ],
      "relations": Array [
        "two",
      ],
    },
  },
  "/packages/three/version": Object {
    "operation": "update",
    "value": "3.4.6",
  },
  "/packages/two/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "three",
      ],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
}
`;

exports[`large test: exact mode applies several messages 1`] = `
Object {
  "/changelog/1.9.0": Object {
    "operation": "add",
    "value": Object {
      "changes": Object {
        "four": Object {
          "determinedIncrementLevel": "minor",
          "messages": Array [
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "subject": "taz",
              "type": "feat",
            },
          ],
          "version": "4.6.0",
        },
        "one": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "one",
              ],
              "body": "",
              "subject": "raz",
              "type": "fix",
            },
          ],
          "version": "1.2.4",
        },
        "three": Object {
          "determinedIncrementLevel": "patch",
          "messages": Array [
            Object {
              "affected": Array [
                "three",
              ],
              "body": "",
              "subject": "roo",
              "type": "fix",
            },
            Object {
              "affected": Array [
                "four",
              ],
              "body": "",
              "source": undefined,
              "subject": "feat: taz",
              "type": "dependency update",
            },
          ],
          "version": "3.4.6",
        },
      },
      "date": "Thu, 01 Jan 1970 00:00:00 GMT",
    },
  },
  "/mainPackage/rlsr/determinedIncrementLevel": Object {
    "operation": "add",
    "value": 1,
  },
  "/mainPackage/rlsr/previouslyUnreleased": Object {
    "operation": "add",
    "value": Array [
      "one",
      "three",
      "four",
    ],
  },
  "/mainPackage/rlsr/shouldBeCommitted": Object {
    "operation": "add",
    "value": Array [],
  },
  "/mainPackage/version": Object {
    "operation": "update",
    "value": "1.9.0",
  },
  "/messages/0": Object {
    "operation": "delete",
  },
  "/messages/1": Object {
    "operation": "delete",
  },
  "/messages/2": Object {
    "operation": "delete",
  },
  "/packages/five/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
      ],
    },
  },
  "/packages/four/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [],
      "determinedIncrementLevel": 1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "",
          "level": 1,
          "scope": "four",
          "subject": "taz",
          "type": "feat",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [
        "one",
        "three",
      ],
    },
  },
  "/packages/four/version": Object {
    "operation": "update",
    "value": "4.6.0",
  },
  "/packages/one/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "four",
        "five",
      ],
      "determinedIncrementLevel": 0,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "one",
          ],
          "body": "",
          "level": 0,
          "scope": "one",
          "subject": "raz",
          "type": "fix",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
  "/packages/one/version": Object {
    "operation": "update",
    "value": "1.2.4",
  },
  "/packages/three/dependencies/four": Object {
    "operation": "update",
    "value": "^4",
  },
  "/packages/three/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "four",
      ],
      "determinedIncrementLevel": 0,
      "devDependencies": Array [],
      "devRelations": Array [],
      "hasBump": true,
      "messages": Array [
        Object {
          "affected": Array [
            "three",
          ],
          "body": "",
          "level": 0,
          "scope": "three",
          "subject": "roo",
          "type": "fix",
        },
      ],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [
        Object {
          "affected": Array [
            "four",
          ],
          "body": "",
          "dependencyType": "dependencies",
          "level": 1,
          "package": "four",
          "scope": "four",
          "subject": "taz",
          "type": "feat",
          "version": "4.6.0",
        },
      ],
      "relations": Array [
        "two",
      ],
    },
  },
  "/packages/three/version": Object {
    "operation": "update",
    "value": "3.4.6",
  },
  "/packages/two/rlsr": Object {
    "operation": "add",
    "value": Object {
      "dependencies": Array [
        "three",
      ],
      "determinedIncrementLevel": -1,
      "devDependencies": Array [],
      "devRelations": Array [],
      "messages": Array [],
      "peerDependencies": Array [],
      "peerRelations": Array [],
      "relatedMessages": Array [],
      "relations": Array [],
    },
  },
}
`;
